# CrossChainBridge

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
docs/: coordination-handoff.md  writeup-solana-aaron.md
docs/superpowers/plans/: 2026-04-25-solana-anchor-bridge.md
docs/superpowers/specs/: 2026-04-25-solana-anchor-bridge-design.md
ethereum/: deployed.json  hardhat.config.js  package-lock.json  package.json
ethereum/artifacts/contracts/BridgeToken.sol/: BridgeToken.dbg.json  BridgeToken.json
ethereum/cache/: solidity-files-cache.json
ethereum/contracts/: BridgeToken.sol  EthBridge.sol
ethereum/scripts/: deploy.js
ethereum/test/: EthBridge.test.js
evm/: .env.example  .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
evm/contracts/: EthBridge.sol  TestToken.sol
evm/scripts/: deploy.ts
evm/test/: EthBridge.test.ts
evm/types/ethers-contracts/: EthBridge.ts  TestToken.ts  hardhat.d.ts  index.ts
idl/: bridge.json
migrations/: deploy.ts  manual-mint.ts  update-source-binding.ts
programs/bridge/: Cargo.toml
programs/bridge/src/: errors.rs  lib.rs  payload.rs  state.rs
programs/bridge/src/instructions/: initialize.rs  mint_wrapped.rs  mod.rs  set_paused.rs  set_relayer.rs  set_source_binding.rs
relayer/: index-sim.js  index.js  package-lock.json  package.json
solana/: Anchor.toml
solana/programs/sol_bridge/: Cargo.toml
src/: config.ts  db.ts  errors.ts  index.ts  listener.ts  submitter.ts  types.ts
tests/: bridge.ts
(+8 files in other folders)
