[package]
name = "bridge"
version = "0.1.0"
description = "Cross-chain bridge: ETH -> SOL wrapped mint"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token"] }
